Bug 470737 - TM: "switch(1/0){case Infinity:}" 4X slower with JIT enabled.  r=gal